fix: github data not showing in context error

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'PrimaryFont';
+  src: url('/font_primary.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
-  font-family: 'Source Sans 3', sans-serif;
+  font-family: 'PrimaryFont', 'Source Sans 3', sans-serif;
 }
